--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
   "dependencies": {
     "@hookform/devtools": "2.0.0-beta.1",
     "little-state-machine": "3.0.1",
+    "next": "^10.0.1",
+    "next-i18next": "^7.0.1",
     "prismjs": "^1.21.0",
     "ptz-i18n": "^1.0.0",
-    "next": "^10.0.1",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-github-btn": "1.2.0",
