--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "next build",
     "start": "next start",
     "export": "next export",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx --fix"
+    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.json --fix"
   },
   "dependencies": {
     "@hookform/devtools": "2.0.0-beta.1",
